--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,26 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/hasanavtar.png"
+      href="%PUBLIC_URL%/image.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/hasanavtar.png"
+      href="%PUBLIC_URL%/image.png"
     />
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7"
       color="#885bd5"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/hasanavtar.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/image.png" />
     <meta name="msapplication-TileColor" content="#603cba" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
-      name="Learn ML with Hasan"
+      name="Learn ML with You"
       content="Web site created using create-react-app"
     />
     <link
@@ -88,7 +88,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Learn ML with Hasan</title>
+    <title>Learn ML with Your</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
